# padaria

./: db.sqlite3  pyproject.toml
media/: download.jfif
padaria/: settings.py  urls.py
padaria/produtos/: admin.py  apps.py  models.py  urls.py  views.py
padaria/produtos/migrations/: 0001_initial.py  0002_alter_pedido_data_alter_pedido_valor_total.py  0003_remove_pedido_valor_total.py
templates/: index.html  pedido.html  sucesso.html
